[package]
name = "bellframe"
version = "0.5.1"
edition = "2021"

authors = ["Ben White-Horne <kneasle@gmail.com>"]
description = "Fast and idiomatic primitives for Change Ringing."
license = "MIT"
repository = "https://github.com/kneasle/ringing-monorepo"

[package.metadata.workspaces]
independent = true

[features]
default = ["cc_lib"]
# Enables code to parse the CCCBR's XML format into a `MethodLib`
cc_lib_gen = ["method_lib_serde", "minidom"]
# Enables easy access to the CCCBR method library
cc_lib = ["method_lib_serde", "dirs", "reqwest"]
# Enables (de)?serialize for `MethodLib`s into condensed JSON
method_lib_serde = ["serde_crate", "serde_json"]
# Enables serde implementations for commonly used data-types (Bell, Stage, Row, etc.)
serde = ["serde_crate"]

[dependencies]
dirs = { version = "4.0", optional = true }
edit-distance = "2.1"
factorial = "0.2"
itertools = "0.10.0"
reqwest = { version = "0.11", optional = true, features = ["blocking"] }
serde_json = { version = "1.0", optional = true }
shortlist = "0.2"
# Dependencies which are only required to generate the CC library
minidom = { version = "0.13", optional = true }

# Reimport `serde` as `serde_crate` so we can use `serde` as a feature name
[dependencies.serde_crate]
package = "serde"
version = "1.0"
optional = true
features = ["derive"]

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
