[package]
name = "monument_cli"
version = "0.1.0"
authors = ["Ben White-Horne <kneasle@gmail.com>"]
edition = "2018"

[dependencies]
bellframe = { path = "../../bellframe/", features = ["serde"] }
hmap = "0.1"
itertools = "0.10"
log = "0.4"
monument = { path = "../monument/" }
number_prefix = "0.4"
separator = "0.4"
serde = "1.0"
serde_derive = "1.0"
structopt = "0.3"
toml = "0.5"

[dev-dependencies]
glob = "0.3"
pathdiff = "0.2"
serde_json = "1.0"
colored = "2"

[[bin]]
path = "src/main.rs"
name = "monument"

[[test]]
name = "examples"
path = "test/test.rs"
harness = false

# Run the examples as benchmarks
[[bench]]
name = "examples"
path = "test/bench.rs"
harness = false
