[package]
name = "monument_cli"
version = "0.1.0"
edition = "2018"

[dependencies]
bellframe = { path = "../../bellframe/", features = ["serde"] }
itertools = "0.10"
log = "0.3" # TODO: Bump this to 0.4
monument.path = "../monument/"
pretty_logger = "0.1"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
toml = "0.5"
