[package]
name = "monument_cli"
version = "0.13.2"
edition = "2021"

authors = ["Ben White-Horne <kneasle@gmail.com>"]
description = "CLI interface to Monument, a fast and flexible composing engine."
readme = "../README.md"
license = "MIT"
repository = "https://github.com/kneasle/ringing-monorepo"

[dependencies]
anyhow = "1.0"
bellframe = { version = "0.11.0", path = "../../bellframe/", features = ["serde"] }
colored = "2.0"
ctrlc = "3.2"
difference = "2.0"
hmap = "0.1"
itertools = "0.10"
log = "0.4"
monument = { version = "0.13.0", path = "../lib/" }
ordered-float = "3.4"
ringing_utils = { version = "0.1.0", package = "kneasle_ringing_utils", path = "../../utils/" }
serde = { version = "1.0", features = ["derive"] }
simple_logger = "4.0"
structopt = "0.3"
sysinfo = "0.27"
toml = "0.5"

[dev-dependencies]
rayon = "1.6"
regex = "1.7"
walkdir = "2.3"

[[test]]
name = "integration"
path = "../test/runner.rs"
harness = false
