[package]
name = "monument_cli"
version = "0.14.4"
edition = "2021"

authors = ["Ben White-Horne <kneasle@gmail.com>"]
description = "CLI interface to Monument, a fast and flexible composition generator."
readme = "../README.md"
license = "MIT"
repository = "https://github.com/kneasle/ringing-monorepo"

[dependencies]
anyhow = "1.0"
bellframe = { version = "0.13.0", path = "../../bellframe/", features = ["serde"] }
colored = "2.0"
ctrlc = "3.4"
difference = "2.0"
hmap = "0.1"
index_vec = "0.1"
itertools = "0.11"
log = "0.4"
monument = { version = "0.14.0", path = "../lib/" }
ordered-float = "3.7"
ringing_utils = { version = "0.1.0", package = "kneasle_ringing_utils", path = "../../utils/" }
serde = { version = "1.0", features = ["derive"] }
simple_logger = "4.2"
structopt = "0.3"
sysinfo = "0.29"
toml = "0.5"

[dev-dependencies]
rayon = "1.7"
regex = "1.8"
walkdir = "2.3"
path-slash = "0.2.1"

[[test]]
name = "integration"
path = "../test/src/test.rs"
harness = false

[[bench]]
name = "integration"
path = "../test/src/bench.rs"
harness = false
