[package]
name = "monument_cli"
version = "0.14.3"
edition = "2021"

authors = ["Ben White-Horne <kneasle@gmail.com>"]
description = "CLI interface to Monument, a fast and flexible composition generator."
readme = "../README.md"
license = "MIT"
repository = "https://github.com/kneasle/ringing-monorepo"

[dependencies]
anyhow = "1.0.80"
bellframe = { version = "0.13.0", path = "../../bellframe/", features = ["serde"] }
colored = "2.1.0"
ctrlc = "3.4.2"
difference = "2.0.0"
hmap = "0.1.0"
index_vec = "0.1.3"
itertools = "0.12.1"
log = "0.4.20"
monument = { version = "0.14.0", path = "../lib/" }
ordered-float = "4.2.0"
ringing_utils = { version = "0.1.0", package = "kneasle_ringing_utils", path = "../../utils/" }
serde = { version = "1.0.197", features = ["derive"] }
simple_logger = "4.3.3"
structopt = "0.3.26"
sysinfo = "0.30.5"
toml = "0.8.10"

[dev-dependencies]
rayon = "1.8.1"
regex = "1.10.3"
walkdir = "2.4.0"
path-slash = "0.2.1"

[[test]]
name = "integration"
path = "../test/src/test.rs"
harness = false

[[bench]]
name = "integration"
path = "../test/src/bench.rs"
harness = false
