[package]
name = "monument"
version = "0.2.0"
edition = "2021"

authors = ["Ben White-Horne <kneasle@gmail.com>"]
description = "A fast and flexible composing engine."
license = "MIT"
repository = "https://github.com/kneasle/ringing-monorepo"

[dependencies]
bellframe = { version = "0.5.0", path = "../../bellframe/" }
bit-vec = "0.6"
gcd = "2.0"
index_vec = "0.1"
itertools = "0.10"
log = "0.4"
ordered-float = "2.10"
serde = { version = "1.0", features = ["derive"] }
num_cpus = "1.13"
