[package]
name = "monument"
version = "0.11.0"
edition = "2021"

authors = ["Ben White-Horne <kneasle@gmail.com>"]
description = "A fast and flexible composing engine."
readme = "../README.md"
license = "MIT"
repository = "https://github.com/kneasle/ringing-monorepo"

[dependencies]
bellframe = { version = "0.10.0", path = "../../bellframe/" }
bit-vec = "0.6"
datasize = "0.2"
gcd = "2.0"
hmap = "0.1"
index_vec = "0.1"
itertools = "0.10"
log = "0.4"
num_cpus = "1.13"
ordered-float = "3.2"
ringing_utils = { version = "0.1.0", package = "kneasle_ringing_utils", path = "../../utils/" }
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.26"
