[package]
name = "monument"
version = "0.14.3"
edition = "2021"

authors = ["Ben White-Horne <kneasle@gmail.com>"]
description = "A fast and flexible composition generator."
readme = "../README.md"
license = "MIT"
repository = "https://github.com/kneasle/ringing-monorepo"

[dependencies]
bellframe = { version = "0.13.0", path = "../../bellframe/" }
bit-vec = "0.6.3"
datasize = "0.2.15"
gcd = "2.3.0"
hmap = "0.1.0"
index_vec = "0.1.3"
itertools = "0.12.1"
log = "0.4.20"
num_cpus = "1.16.0"
ordered-float = "4.2.0"
ringing_utils = { version = "0.1.0", package = "kneasle_ringing_utils", path = "../../utils/" }
sysinfo = "0.30.5"
